Added tent image to index

--- a/index.html
+++ b/index.html
@@ -1,10 +1,20 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<link rel="stylesheet" type="text/css" href="resources/css/style.css">
-	<title></title>
-</head>
-<body>
 
+<head>
+    <link rel="stylesheet" type="text/css" href="resources/css/style.css">
+    <title>Excursion</title>
+</head>
+
+<body>
+    <h1>Discover hidden places in the world around you</h1>
+    <p>Download Excursion (Coming soon!)</p>
+    <video autoplay>
+        <source src="resources/videos/excursion.mp4" type="video/mp4">
+    </video>
+    <h2>Your personal travel guide</h2>
+    <p>Excursion remebers places you like, and recommends new points of interest around you.</p>
+    <img src="resources/images/camp.jpg">
 </body>
+
 </html>
