--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-    <h1>Discover hidden places in the world around you</h1>
+    <h1>Discover hidden places in the world around you by Taino</h1>
     <p>Download Excursion (Coming soon!)</p>
     <video autoplay>
         <source src="resources/videos/excursion.mp4" type="video/mp4">
