--- a/index.html
+++ b/index.html
@@ -7,14 +7,20 @@
 </head>
 
 <body>
-    <h1>Discover hidden places in the world around you by Taino</h1>
-    <p>Download Excursion (Coming soon!)</p>
-    <video autoplay>
+    <h1 class="headline">Discover hidden places in the world around you</h1>
+    <p class="download"><a href="#">Download Excursion (Coming soon!)</a></p>
+    <div class="centervideo">
+    <video autoplay loop>
         <source src="resources/videos/excursion.mp4" type="video/mp4">
-    </video>
-    <h2>Your personal travel guide</h2>
-    <p>Excursion remebers places you like, and recommends new points of interest around you.</p>
+    </video></div>
+    <h2 class="personal">Your personal travel guide</h2>
+    <p class="info">Excursion remebers places you like, and recommends new points of interest around you.</p>
     <img src="resources/images/camp.jpg">
+    <br>
+    <img src="resources/images/phone.png">
+    <h2 class="coming">Coming Soon for iPhone and Android</h2>
+    <p class="download"><a href="#">Download Excursion (Coming soon!)</a></p>
+    <p id="copyright">&copy; Excursion</p>
 </body>
 
 </html>
