--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@
     <h1 class="headline">Discover hidden places in the world around you</h1>
     <p class="download"><a href="#">Download Excursion (Coming soon!)</a></p>
     <div class="centervideo">
-    <video autoplay loop>
-        <source src="resources/videos/excursion.mp4" type="video/mp4">
-    </video></div>
+        <video id="iphone" autoplay loop>
+            <source src="resources/videos/excursion.mp4" type="video/mp4">
+        </video>
+    </div>
     <h2 class="personal">Your personal travel guide</h2>
     <p class="info">Excursion remebers places you like, and recommends new points of interest around you.</p>
     <img src="resources/images/camp.jpg">
