Final version / version 1

--- a/index.html
+++ b/index.html
@@ -8,19 +8,33 @@
 
 <body>
     <h1 class="headline">Discover hidden places in the world around you</h1>
+
+    <!-- Link which reloads the page -->
     <p class="download"><a href="#">Download Excursion (Coming soon!)</a></p>
+
+    <!-- iPhone image with video playing on loop -->
     <div class="centervideo">
         <video id="iphone" autoplay loop>
             <source src="resources/videos/excursion.mp4" type="video/mp4">
         </video>
     </div>
+
     <h2 class="personal">Your personal travel guide</h2>
-    <p class="info">Excursion remebers places you like, and recommends new points of interest around you.</p>
-    <img src="resources/images/camp.jpg">
-    <br>
-    <img src="resources/images/phone.png">
+    <p class="info">Excursion remembers places you like, and recommends new points of interest around you.</p>
+
+    <div id="camp">
+        <img src="resources/images/camp.jpg">
+    </div>
+
+    <div id="smallphone">
+        <img src="resources/images/phone.png">
+    </div>
+
     <h2 class="coming">Coming Soon for iPhone and Android</h2>
+
+    <!-- Link which reloads the page -->
     <p class="download"><a href="#">Download Excursion (Coming soon!)</a></p>
+    <!-- Copyright aligned to the right -->
     <p id="copyright">&copy; Excursion</p>
 </body>
 
